--- a/Prevu.Synoptics.V3168_Sirplaste/D998.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/D998.xaml
@@ -1,20 +1,26 @@
-﻿<UserControl x:Class="Prevu.Synoptics.D998"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:lex="http://wpflocalizeextension.codeplex.com"
              xmlns:local="clr-namespace:Prevu.Synoptics"
 						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
+             xmlns:BigBag="clr-namespace:Prevu.Drawings.Machines.BigBag;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D998" 
              mc:Ignorable="d" 
+             Width="541" Height="350"
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid Height="411" MinWidth="380" Width="444">
-        <Machines:BBF_BigBagFilling Height="385" VerticalAlignment="Center" HorizontalAlignment="Left" Width="430" Margin="10,0,0,0" />
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="183,72,0,0" VerticalAlignment="Top" ComponentName="998-61-BAG" SignalName="LSH"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-		Margin="180,0,0,0" 
+    <Canvas>
+        <BigBag:BBF_DoubleBigBagFilling Canvas.Left="10" Canvas.Top="10" Height="330" Width="523" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="998-61-BAG" SignalName="LSH" Canvas.Left="115" Canvas.Top="71"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Center" 
-		ComponentName="998-61-BAG"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="175,240,0,0" VerticalAlignment="Top" ComponentName="998-61-BAG" SignalName="ENABLE"/>
-    </Grid>
+		ComponentName="998-61-BAG" Canvas.Left="105" Canvas.Top="150"/>
+        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="998-61-BAG" SignalName="SEL" Canvas.Left="117" Canvas.Top="205"/>
+        <Labels:SignalLabel ComponentName="998-62-BAG" SignalName="LSH" Canvas.Left="358" Canvas.Top="71" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel 
+            ComponentName="998-62-BAG" Canvas.Left="348" Canvas.Top="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:SignalLabel ComponentName="998-62-BAG" SignalName="SEL" Canvas.Left="360" Canvas.Top="205" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    </Canvas>
 </UserControl>
