--- a/Prevu.Synoptics.V3168_Sirplaste/P530.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P530.xaml
@@ -5,18 +5,12 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
+             xmlns:Blowers="clr-namespace:Prevu.Drawings.Machines.Blowers;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P530" mc:Ignorable="d"
-             Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid RenderTransformOrigin="0.5,0.5">
-        <Grid.RenderTransform>
-            <TransformGroup>
-                <ScaleTransform/>
-                <SkewTransform/>
-                <RotateTransform Angle="0.1"/>
-                <TranslateTransform/>
-            </TransformGroup>
-        </Grid.RenderTransform>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="802,279,0,0" VerticalAlignment="Top" Width="158" StatusComponent="526-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="">
+             Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
+
+    <Canvas>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="158" StatusComponent="526-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="" Canvas.Left="802" Canvas.Top="319">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -26,7 +20,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="694,205,0,0" VerticalAlignment="Top" Width="191" StatusComponent="526-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="191" StatusComponent="526-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="" Canvas.Left="694" Canvas.Top="245">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -36,7 +30,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="411,273,0,0" VerticalAlignment="Top" Width="112" StatusComponent="455-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="112" StatusComponent="455-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="" Canvas.Left="411" Canvas.Top="313">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -46,7 +40,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="376,221,0,0" VerticalAlignment="Top" Width="95" StatusComponent="455-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="95" StatusComponent="455-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="" Canvas.Left="376" Canvas.Top="261">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -56,9 +50,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1047,575,0,0" VerticalAlignment="Top" Width="118" StatusComponent="534-01-MA1" PipeHeight="Medium" Height="14"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="421,564,0,0" VerticalAlignment="Top" Width="439" StatusComponent="534-01-MA1" Color="Air"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="800,466,0,0" VerticalAlignment="Top" Width="160" StatusComponent="528-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="86" StatusComponent="534-01-MA1" Color="Air" Canvas.Left="774" Canvas.Top="604"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="160" StatusComponent="528-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="" Canvas.Left="800" Canvas.Top="506">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -68,15 +61,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="903,563,0,0" VerticalAlignment="Top" Width="111" StatusComponent="534-01-MA1" PipeHeight="Medium" VisibilitySignal=""/>
-        <Rectangle HorizontalAlignment="Left" Height="199" Margin="382,471,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="426" RadiusX="15" RadiusY="15"/>
-        <Rectangle HorizontalAlignment="Left" Height="35" Margin="745,534,0,0" Stroke="Black" VerticalAlignment="Top" Width="2"/>
-        <Ellipse HorizontalAlignment="Left" Height="16" Margin="738,558,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
-        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1005,528,0,0" VerticalAlignment="Top" Height="67" Width="67"/>
-        <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="410,534,0,0" VerticalAlignment="Top" Height="65" Width="66"/>
-        <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="514,534,0,0" VerticalAlignment="Top" Height="65" Width="66"/>
-        <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="616,534,0,0" VerticalAlignment="Top" Height="65" Width="66"/>
-        <Machines:DV_Diverter_T HorizontalAlignment="Left" Margin="830,504,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="256" StatusComponent="534-01-MA1" PipeHeight="Medium" VisibilitySignal="" Canvas.Left="903" Canvas.Top="603"/>
+        <Machines:DRY_HeatingBattery HorizontalAlignment="Center" VerticalAlignment="Top" Height="65" Width="66" Canvas.Left="732" Canvas.Top="574"/>
+        <Machines:DV_Diverter_T HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Canvas.Left="830" Canvas.Top="544">
             <Machines:DV_Diverter_T.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -86,9 +73,9 @@
                 </TransformGroup>
             </Machines:DV_Diverter_T.RenderTransform>
         </Machines:DV_Diverter_T>
-        <Machines:VS_Airlock HorizontalAlignment="Left" Margin="843,346,0,0" VerticalAlignment="Top" Height="72" Width="76"/>
-        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="447,327,0,0" VerticalAlignment="Top"/>
-        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="578,194,0,0" VerticalAlignment="Top" Height="160" Width="128" RenderTransformOrigin="0.5,0.5">
+        <Machines:VS_Airlock HorizontalAlignment="Center" VerticalAlignment="Top" Height="72" Width="76" Canvas.Left="843" Canvas.Top="386"/>
+        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="447" Canvas.Top="367"/>
+        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Center" VerticalAlignment="Top" Height="160" Width="128" RenderTransformOrigin="0.5,0.5" Canvas.Left="578" Canvas.Top="234">
             <Machines:DCE_DryingCentrifuge.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -98,47 +85,27 @@
                 </TransformGroup>
             </Machines:DCE_DryingCentrifuge.RenderTransform>
         </Machines:DCE_DryingCentrifuge>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="313,190,0,0" 
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1011" Canvas.Top="583" Height="50" Width="54" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="534-01-MA1" Canvas.Left="993" Canvas.Top="640"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="524-01-MA1" Canvas.Left="348" Canvas.Top="352"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="526-01-MA1" Canvas.Left="582" Canvas.Top="177"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="528-01-MA1" Canvas.Left="922" Canvas.Top="399"/>
+        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="530-DRY" DetailsPageName="D530" Canvas.Left="740" Canvas.Top="522"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="524-01-MA1" 
-            JumpToLabel="455-01-MA1"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="1136,546,0,0" 
+            JumpToLabel="455-01-MA1" Canvas.Left="313" Canvas.Top="230"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="534-01-MA1" 
-            JumpToLabel="810-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="993,591,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="534-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="704,485,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="530-41-TT1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="398,602,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="530-13-R1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="502,602,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="530-12-R1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="604,602,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="530-11-R1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="348,312,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="524-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="582,137,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="526-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="922,359,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="528-01-MA1"/>
-    </Grid>
+            JumpToLabel="810-01-MA1" Canvas.Left="1136" Canvas.Top="574"/>
+    </Canvas>
 </UserControl>
