--- a/Prevu.Synoptics.V3168_Sirplaste/D430.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/D430.xaml
@@ -8,29 +8,24 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D430" 
              mc:Ignorable="d" 
-             Height="301"  Width="575"
+             Height="186"  Width="600"
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
-        <Separation:VSP_SeparationTank_wBottomScrew VerticalAlignment="Top" Height="285" Canvas.Left="10" Canvas.Top="10" Width="555" HorizontalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-		Margin="25,109,0,0" 
+        <Separation:VSP_DETAILPADDLES_SeparationTank_wBottomSrcew Canvas.Left="10" Canvas.Top="15" Height="140" Width="580" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Top" 
-		ComponentName="430-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="127,109,0,0" 
+		ComponentName="430-01-MA1" Canvas.Left="36" Canvas.Top="108"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="430-01-MA2"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="230,109,0,0" 
+            ComponentName="430-01-MA2" Canvas.Left="138" Canvas.Top="108"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="430-01-MA3"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="333,109,0,0" 
+            ComponentName="430-01-MA3" Canvas.Left="241" Canvas.Top="108"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="430-01-MA4"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="435,109,0,0" 
+            ComponentName="430-01-MA4" Canvas.Left="344" Canvas.Top="108"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="430-01-MA5"/>
+            ComponentName="430-01-MA5" Canvas.Left="446" Canvas.Top="108"/>
     </Canvas>
 </UserControl>
