--- a/Prevu.Synoptics.V3168_Sirplaste/P330.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P330.xaml
@@ -9,7 +9,7 @@
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="96" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="414" Canvas.Top="79"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="52" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22" RenderTransformOrigin="0.5,0.5" Canvas.Left="479" Canvas.Top="100">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="72" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22" RenderTransformOrigin="0.5,0.5" Canvas.Left="469" Canvas.Top="110">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -192,7 +192,6 @@
                 </TransformGroup>
             </Machines:SCW_ScrewConveyor_straight.RenderTransform>
         </Machines:SCW_ScrewConveyor_straight>
-        <Machines:VSP_SeparationTank HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50" Canvas.Left="485" Canvas.Top="113"/>
         <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1212" Canvas.Top="583">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
