--- a/Prevu.Synoptics.V3168_Sirplaste/P430.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P430.xaml
@@ -61,9 +61,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="285" Color="Water" StatusComponent="431-01-MA1" VisibilityComponent="" Canvas.Left="789" Canvas.Top="334"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="204" Color="Water" StatusComponent="431-01-MA1" VisibilityComponent="" Canvas.Left="870" Canvas.Top="364" Height="4"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="218" StatusComponent="420-01-MA1" PipeHeight="Medium" Canvas.Left="353" Canvas.Top="184"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="222" StatusComponent="430-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="883" Canvas.Top="183">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="274" StatusComponent="430-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="831" Canvas.Top="183">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -108,7 +108,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="184" RenderTransformOrigin="0.5,0.5" StatusComponent="431-01-MA1" VisibilityComponent="" Canvas.Left="981" Canvas.Top="424">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="154" RenderTransformOrigin="0.5,0.5" StatusComponent="431-01-MA1" VisibilityComponent="" Canvas.Left="996" Canvas.Top="439">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -180,7 +180,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="72" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="858" Canvas.Top="300">
+        <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="72" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="923" Canvas.Top="330">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -190,7 +190,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Separation:VSP_SeparationTank_wBottomScrew VerticalAlignment="Top" Height="185" Canvas.Left="565" Canvas.Top="166" HorizontalAlignment="Center"/>
+        <Separation:VSP_SeparationTank_wBottomScrew VerticalAlignment="Top" Height="213" Canvas.Left="530" Canvas.Top="166" HorizontalAlignment="Center"/>
         <Machines:VRC_WaterCollectingTank HorizontalAlignment="Center" VerticalAlignment="Top" Height="97" Width="172" Canvas.Left="552" Canvas.Top="672"/>
         <Machines:VB_VibratingScreen HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="1042" Canvas.Top="500"/>
         <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Center" VerticalAlignment="Top" Height="22" Width="114" Canvas.Left="202" Canvas.Top="391"/>
@@ -228,7 +228,7 @@
         </Machines:WaterPump>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="431-01-MA1" Canvas.Left="837" Canvas.Top="370"/>
+            ComponentName="431-01-MA1" Canvas.Left="902" Canvas.Top="400"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="453-01-MA1" Canvas.Left="333" Canvas.Top="633"/>
@@ -238,9 +238,9 @@
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="430-SEPARATION" Canvas.Left="559" Canvas.Top="109"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="430-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="652" Canvas.Top="234">
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="430-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="676" Canvas.Top="233">
             <Labels:DeviceLabel.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -279,7 +279,7 @@
             ComponentName="450-21-CV1" Canvas.Left="494" Canvas.Top="549"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="430-02-MA1" Canvas.Left="470" Canvas.Top="297"/>
+            ComponentName="430-02-MA1" Canvas.Left="449" Canvas.Top="288"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="451-21-CV1" Canvas.Left="532" Canvas.Top="403"/>
