--- a/Prevu.Synoptics.V3168_Sirplaste/P530.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P530.xaml
@@ -62,7 +62,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="256" StatusComponent="534-01-MA1" PipeHeight="Medium" VisibilitySignal="" Canvas.Left="903" Canvas.Top="603"/>
-        <Machines:DRY_HeatingBattery HorizontalAlignment="Center" VerticalAlignment="Top" Height="65" Width="66" Canvas.Left="732" Canvas.Top="574"/>
+        <Machines:DRY_HeatingBattery HorizontalAlignment="Left" VerticalAlignment="Center" Height="51" Width="52" Canvas.Left="740" Canvas.Top="581"/>
         <Machines:DV_Diverter_T HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Canvas.Left="830" Canvas.Top="544">
             <Machines:DV_Diverter_T.RenderTransform>
                 <TransformGroup>
@@ -98,7 +98,7 @@
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="528-01-MA1" Canvas.Left="922" Canvas.Top="399"/>
-        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="530-DRY" DetailsPageName="D530" Canvas.Left="740" Canvas.Top="522"/>
+        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="530-DRY" DetailsPageName="D530" Canvas.Left="740" Canvas.Top="530"/>
         <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="524-01-MA1" 
