Update Prevu.Synoptics Template

--- a/Prevu.Synoptics/GR1.xaml
+++ b/Prevu.Synoptics/GR1.xaml
@@ -6,8 +6,8 @@
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              x:Class="Prevu.Synoptics.GR1" mc:Ignorable="d" CacheMode="BitmapCache"
-             Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
-  <Grid>
+             Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
+  <Canvas>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
                         Margin="59,35,0,0" 
                         VerticalAlignment="Top" 
@@ -31,5 +31,5 @@
                         Width="148" 
                         ComponentName="230-01-MA1" 
                         SignalName="230-01-ZS1"/>
-  </Grid>
+  </Canvas>
 </UserControl>
