--- a/Prevu.Synoptics.V2502_Polymer_Processor/D510.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/D510.xaml
@@ -8,7 +8,7 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
             d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid Height="300" Width="400" >
+    <Canvas Height="300" Width="400" >
         <Labels:Pipe HorizontalAlignment="Left" Margin="188,40,0,0" VerticalAlignment="Top" Width="68" StatusComponent="510-27-CV1" Color="Air"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="188,110,0,0" VerticalAlignment="Top" Width="68" StatusComponent="510-27-CV2" Color="Air"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="188,180,0,0" VerticalAlignment="Top" Width="68" StatusComponent="510-27-CV3" Color="Air"/>
@@ -21,7 +21,7 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="32,88,0,0" VerticalAlignment="Top" ComponentName="510-27-CV2"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="32,158,0,0" VerticalAlignment="Top" ComponentName="510-27-CV3"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="32,228,0,0" VerticalAlignment="Top" ComponentName="510-27-CV4"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="290,0,0,0" VerticalAlignment="Center" ComponentName="510-VLV-BLK"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="510-VLV-BLK" Canvas.Left="290" Canvas.Top="123"/>
 
-    </Grid>
+    </Canvas>
 </UserControl>
