--- a/Prevu.Synoptics.V3168_Sirplaste/D354.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/D354.xaml
@@ -8,9 +8,9 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D354" 
              mc:Ignorable="d" 
-             Height="350" Width="359"
+             
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas>
+    <Canvas Height="350" Width="359">
         <Labels:Pipe Width="277" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" HorizontalAlignment="Left" Canvas.Left="52" Canvas.Top="170" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
