--- a/Prevu.Synoptics.V3168_Sirplaste/D430.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/D430.xaml
@@ -8,9 +8,8 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D430" 
              mc:Ignorable="d" 
-             Height="186"  Width="600"
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas >
+    <Canvas Height="186"  Width="600">
         <Separation:VSP_DETAILPADDLES_SeparationTank_wBottomSrcew Canvas.Left="10" Canvas.Top="15" Height="140" Width="580" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Top" 
