--- a/Prevu.Synoptics.V3168_Sirplaste/D873.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/D873.xaml
@@ -7,9 +7,8 @@
 						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
-             Height="344" Width="368"
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas>
+    <Canvas Height="344" Width="368">
         <Machines:BBF_BigBagFilling Height="320" VerticalAlignment="Center" HorizontalAlignment="Center" Width="343" Canvas.Left="10" Canvas.Top="10" />
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="873-62-BAG" SignalName="LSH" Canvas.Left="146" Canvas.Top="72"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
