--- a/Prevu.Synoptics.V3168_Sirplaste/D997.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/D997.xaml
@@ -9,9 +9,8 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              xmlns:BigBag="clr-namespace:Prevu.Drawings.Machines.BigBag;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D997" 
              mc:Ignorable="d" 
-             Width="541" Height="350"
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas>
+    <Canvas Width="541" Height="350">
         <BigBag:BBF_DoubleBigBagFilling Canvas.Left="10" Canvas.Top="10" Height="330" Width="523" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="997-61-BAG" SignalName="LSH" Canvas.Left="115" Canvas.Top="71"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
