--- a/Prevu.Synoptics.V3510_Greentech_Romania/D820.xaml
+++ b/Prevu.Synoptics.V3510_Greentech_Romania/D820.xaml
@@ -7,9 +7,8 @@
 						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
-             Height="450" Width="320"
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas >
+    <Canvas Height="450" Width="320">
         <Machines:Storage_silo Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="820-61-LEV" SignalName="LSHA" Canvas.Left="201" Canvas.Top="48"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
