--- a/Prevu.Synoptics.V2502_Polymer_Processor/D474.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/D474.xaml
@@ -8,7 +8,7 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
               d:Background="{DynamicResource MaterialDesignPaper}">
-	<Grid Height="425" Width="495">
+	<Canvas Height="425" Width="495">
 		<Labels:Pipe HorizontalAlignment="Left" Margin="213,65,0,0" VerticalAlignment="Top" Color="Oil" Width="32" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-23-CV1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
@@ -194,5 +194,5 @@
             Margin="29,318,0,0" 
             VerticalAlignment="Top" 
             ComponentName="474-42-TT1"/>
-	</Grid>
+	</Canvas>
 </UserControl>
