--- a/Prevu.Synoptics.V2502_Polymer_Processor/P474.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P474.xaml
@@ -5,10 +5,11 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
+             xmlns:Blowers="clr-namespace:Prevu.Drawings.Machines.Blowers;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P474" mc:Ignorable="d" 
-             Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="441,551,0,0" VerticalAlignment="Top" Color="Oil" Width="246" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-02-MA1">
+             Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
+    <Canvas>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="246" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-02-MA1" Canvas.Left="521" Canvas.Top="571">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -18,7 +19,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="603,499,0,0" VerticalAlignment="Top" Color="Oil" Width="128" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="128" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-02-MA1" Canvas.Left="683" Canvas.Top="519">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -28,7 +29,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="828,533,0,0" VerticalAlignment="Top" Width="132" StatusComponent="474-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="132" StatusComponent="474-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="908" Canvas.Top="553">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -38,7 +39,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="680,249,0,0" VerticalAlignment="Top" Width="98" StatusComponent="465-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="98" StatusComponent="465-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="760" Canvas.Top="269">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -48,7 +49,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="440,432,0,0" VerticalAlignment="Top" Color="Oil" Width="279" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="279" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-02-MA1" Canvas.Left="520" Canvas.Top="452">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -58,7 +59,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="336,497,0,0" VerticalAlignment="Top" Color="Oil" Width="250" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="250" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-02-MA1" Canvas.Left="416" Canvas.Top="517">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -68,7 +69,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Rectangle HorizontalAlignment="Left" Height="2" Margin="902,472,0,0" Stroke="Black" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.5,0.5">
+        <Rectangle HorizontalAlignment="Center" Height="2" Stroke="Black" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.5,0.5" Canvas.Left="982" Canvas.Top="492">
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -78,8 +79,8 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Ellipse HorizontalAlignment="Left" Height="16" Margin="453,609,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
-        <Machines:EXC_HeatExchanger HorizontalAlignment="Left" Margin="429,472,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="52" Width="66">
+        <Ellipse HorizontalAlignment="Center" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="533" Canvas.Top="629"/>
+        <Machines:EXC_HeatExchanger HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="52" Width="66" Canvas.Left="509" Canvas.Top="492">
             <Machines:EXC_HeatExchanger.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -89,8 +90,8 @@
                 </TransformGroup>
             </Machines:EXC_HeatExchanger.RenderTransform>
         </Machines:EXC_HeatExchanger>
-        <Machines:FP_FiltroPressa_001 HorizontalAlignment="Left" Height="220" Margin="637,300,0,0" VerticalAlignment="Top" Width="294"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="423,364,0,0" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="45" Width="77">
+        <Machines:FP_FiltroPressa_001 HorizontalAlignment="Center" Height="220" VerticalAlignment="Top" Width="294" Canvas.Left="717" Canvas.Top="320"/>
+        <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="45" Width="77" Canvas.Left="503" Canvas.Top="384">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -100,7 +101,7 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="529,528,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="66" Width="55" Color="Oil">
+        <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="66" Width="55" Color="Oil" Canvas.Left="609" Canvas.Top="548">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -110,33 +111,27 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="781,252,0,0" 
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="474-04-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="549,369,0,0" 
+            ComponentName="474-04-MA1" Canvas.Left="861" Canvas.Top="272"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="474-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="350,367,0,0" 
+            ComponentName="474-01-MA1" Canvas.Left="629" Canvas.Top="389"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="474-21-CV1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="512,603,0,0" 
+            ComponentName="474-21-CV1" Canvas.Left="430" Canvas.Top="387"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="474-02-MA1"/>
-        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="947,448,0,0" VerticalAlignment="Top" ComponentName="474-HYD" DetailsPageName="D474" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-		Margin="550,276,0,0" 
+            ComponentName="474-02-MA1" Canvas.Left="592" Canvas.Top="623"/>
+        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="474-HYD" DetailsPageName="D474" Canvas.Left="1027" Canvas.Top="468" />
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Top" 
-		ComponentName="474-F-PRESS"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-    Margin="928,368,0,0" 
+		ComponentName="474-F-PRESS" Canvas.Left="630" Canvas.Top="296"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
     VerticalAlignment="Top" 
-    ComponentName="474-23-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="425,205,0,0" VerticalAlignment="Top" Width="307" StatusComponent="465-01-MA1" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="407,186,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="46" StatusComponent="350-01-MA1" PipeHeight="Medium" Height="10">
+    ComponentName="474-23-CV1" Canvas.Left="1008" Canvas.Top="388"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="307" StatusComponent="465-01-MA1" PipeHeight="Medium" Canvas.Left="505" Canvas.Top="225"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="46" StatusComponent="350-01-MA1" PipeHeight="Medium" Height="10" Canvas.Left="487" Canvas.Top="206">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -146,23 +141,20 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="452,78,0,0" 
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="465-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="136,93,0,0" VerticalAlignment="Top" Width="170" StatusComponent="331-01-MA1" PipeHeight="Medium" Height="10"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="106,62,0,0" 
+            ComponentName="465-01-MA1" Canvas.Left="532" Canvas.Top="98"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="170" StatusComponent="331-01-MA1" PipeHeight="Medium" Height="10" Canvas.Left="216" Canvas.Top="113"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="465-01-MA1" 
-            JumpToLabel="430-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="145,238,0,0" VerticalAlignment="Top" Width="147" Color="Water" StatusComponent="465-01-MA1" VisibilityComponent=""/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="106,205,0,0" 
+            JumpToLabel="430-01-MA1" Canvas.Left="186" Canvas.Top="82"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="147" Color="Water" StatusComponent="465-01-MA1" VisibilityComponent="" Canvas.Left="225" Canvas.Top="258"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="465-01-MA1" 
-            JumpToLabel="444-01-MA1" Direction="Left"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="255,205,0,0" VerticalAlignment="Top" Width="71" Color="Water" StatusComponent="465-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5">
+            JumpToLabel="444-01-MA1" Direction="Left" Canvas.Left="186" Canvas.Top="225"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="71" Color="Water" StatusComponent="465-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="335" Canvas.Top="225">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -172,7 +164,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="278,57,0,0" VerticalAlignment="Top" Height="180" Width="150" RenderTransformOrigin="0.5,0.5">
+        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Center" VerticalAlignment="Top" Height="180" Width="150" RenderTransformOrigin="0.5,0.5" Canvas.Left="358" Canvas.Top="77">
             <Machines:DCE_DryingCentrifuge.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -182,7 +174,7 @@
                 </TransformGroup>
             </Machines:DCE_DryingCentrifuge.RenderTransform>
         </Machines:DCE_DryingCentrifuge>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1078,645,0,0" VerticalAlignment="Top" Color="Water" Width="50" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="492-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="70" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="492-21-CV1" Canvas.Left="1136" Canvas.Top="648">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -192,7 +184,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="948,646,0,0" VerticalAlignment="Top" Width="98" StatusComponent="490-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="78" StatusComponent="490-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="1038" Canvas.Top="656">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -202,8 +194,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="992,686,0,0" VerticalAlignment="Top" Width="92" StatusComponent="490-01-MA1" PipeHeight="Medium" Height="22"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1123,698,0,0" VerticalAlignment="Top" Width="87" RenderTransformOrigin="0.5,0.5" StatusComponent="518-01-MA1" PipeHeight="Medium" Height="22">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="92" StatusComponent="490-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="1072" Canvas.Top="687"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="126" RenderTransformOrigin="0.5,0.5" StatusComponent="518-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="1194" Canvas.Top="686">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -213,8 +205,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1075,656,0,0" VerticalAlignment="Top" Height="70" Width="64"/>
-        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="881,592,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="131" Height="19">
+        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="131" Height="19" Canvas.Left="961" Canvas.Top="612">
             <Machines:SCW_ScrewConveyor_straight.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -224,15 +215,13 @@
                 </TransformGroup>
             </Machines:SCW_ScrewConveyor_straight.RenderTransform>
         </Machines:SCW_ScrewConveyor_straight>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="882,622,0,0" 
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="490-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1060,724,0,0" 
+            ComponentName="490-01-MA1" Canvas.Left="962" Canvas.Top="642"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="492-01-MA1"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1064,594,0,0" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="45" Width="77">
+            ComponentName="492-01-MA1" Canvas.Left="1126" Canvas.Top="730"/>
+        <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="45" Width="77" Canvas.Left="1132" Canvas.Top="589">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -242,14 +231,13 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1126,592,0,0" 
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="492-21-CV1"/>
+            ComponentName="492-21-CV1" Canvas.Left="1194" Canvas.Top="587"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="1195,676,0,0" 
-            VerticalAlignment="Top" 
+            VerticalAlignment="Center" 
             JumpFromLabel="518-01-MA1" 
-            JumpToLabel="520-01-MA1"/>
-    </Grid>
+            JumpToLabel="520-01-MA1" Canvas.Left="1300" Canvas.Top="664"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1144" Canvas.Top="671" Height="54" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    </Canvas>
 </UserControl>
