--- a/Prevu.Synoptics.V2502_Polymer_Processor/P484.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P484.xaml
@@ -5,10 +5,11 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
+             xmlns:Blowers="clr-namespace:Prevu.Drawings.Machines.Blowers;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P484" mc:Ignorable="d" 
-             Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="441,551,0,0" VerticalAlignment="Top" Color="Oil" Width="246" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="484-02-MA1">
+             Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
+    <Canvas>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="509,568,0,0" VerticalAlignment="Top" Color="Oil" Width="246" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="484-02-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -18,7 +19,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="602,499,0,0" VerticalAlignment="Top" Color="Oil" Width="128" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="484-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="670,516,0,0" VerticalAlignment="Top" Color="Oil" Width="128" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="484-02-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -28,7 +29,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="828,533,0,0" VerticalAlignment="Top" Width="132" StatusComponent="484-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="896,550,0,0" VerticalAlignment="Top" Width="132" StatusComponent="484-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -38,7 +39,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="680,249,0,0" VerticalAlignment="Top" Width="98" StatusComponent="470-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="748,266,0,0" VerticalAlignment="Top" Width="98" StatusComponent="470-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -48,7 +49,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="440,432,0,0" VerticalAlignment="Top" Color="Oil" Width="279" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="484-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="508,449,0,0" VerticalAlignment="Top" Color="Oil" Width="279" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="484-02-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -58,7 +59,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="336,497,0,0" VerticalAlignment="Top" Color="Oil" Width="250" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="484-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="404,514,0,0" VerticalAlignment="Top" Color="Oil" Width="250" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="484-02-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -68,7 +69,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Rectangle HorizontalAlignment="Left" Height="2" Margin="902,472,0,0" Stroke="Black" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.5,0.5">
+        <Rectangle HorizontalAlignment="Left" Height="2" Margin="970,489,0,0" Stroke="Black" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -78,8 +79,8 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Ellipse HorizontalAlignment="Left" Height="16" Margin="453,609,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
-        <Machines:EXC_HeatExchanger HorizontalAlignment="Left" Margin="429,472,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="52" Width="66">
+        <Ellipse HorizontalAlignment="Left" Height="16" Margin="521,626,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
+        <Machines:EXC_HeatExchanger HorizontalAlignment="Left" Margin="497,489,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="52" Width="66">
             <Machines:EXC_HeatExchanger.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -89,8 +90,8 @@
                 </TransformGroup>
             </Machines:EXC_HeatExchanger.RenderTransform>
         </Machines:EXC_HeatExchanger>
-        <Machines:FP_FiltroPressa_001 HorizontalAlignment="Left" Height="220" Margin="637,300,0,0" VerticalAlignment="Top" Width="294"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="423,364,0,0" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="45" Width="77">
+        <Machines:FP_FiltroPressa_001 HorizontalAlignment="Left" Height="220" Margin="705,317,0,0" VerticalAlignment="Top" Width="294"/>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="491,381,0,0" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="45" Width="77">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -100,7 +101,7 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="529,528,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="66" Width="55" Color="Oil">
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="597,545,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="66" Width="55" Color="Oil">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -111,32 +112,32 @@
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="781,252,0,0" 
+            Margin="849,269,0,0" 
             VerticalAlignment="Top" 
             ComponentName="484-04-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="549,369,0,0" 
+            Margin="617,386,0,0" 
             VerticalAlignment="Top" 
             ComponentName="484-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="350,367,0,0" 
+            Margin="418,384,0,0" 
             VerticalAlignment="Top" 
             ComponentName="484-21-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="512,603,0,0" 
+            Margin="580,620,0,0" 
             VerticalAlignment="Top" 
             ComponentName="484-02-MA1"/>
-        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="947,448,0,0" VerticalAlignment="Top" ComponentName="484-HYD" DetailsPageName="D484" />
+        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="1015,465,0,0" VerticalAlignment="Top" ComponentName="484-HYD" DetailsPageName="D484" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-		Margin="550,276,0,0" 
+		Margin="618,293,0,0" 
 		VerticalAlignment="Top" 
 		ComponentName="484-F-PRESS"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-    Margin="928,368,0,0" 
+    Margin="996,385,0,0" 
     VerticalAlignment="Top" 
     ComponentName="484-23-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="425,205,0,0" VerticalAlignment="Top" Width="307" StatusComponent="470-01-MA1" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="407,186,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="46" StatusComponent="350-01-MA1" PipeHeight="Medium" Height="10">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="493,222,0,0" VerticalAlignment="Top" Width="307" StatusComponent="470-01-MA1" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="475,203,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="46" StatusComponent="350-01-MA1" PipeHeight="Medium" Height="10">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -147,22 +148,22 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="452,78,0,0" 
+            Margin="520,95,0,0" 
             VerticalAlignment="Top" 
             ComponentName="470-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="136,93,0,0" VerticalAlignment="Top" Width="170" StatusComponent="430-01-MA1" PipeHeight="Medium" Height="10"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="204,110,0,0" VerticalAlignment="Top" Width="170" StatusComponent="430-01-MA1" PipeHeight="Medium" Height="10"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="106,62,0,0" 
+            Margin="174,79,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="470-01-MA1" 
             JumpToLabel="430-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="145,238,0,0" VerticalAlignment="Top" Width="147" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent=""/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="213,255,0,0" VerticalAlignment="Top" Width="147" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent=""/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="106,205,0,0" 
+            Margin="174,222,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="470-01-MA1" 
             JumpToLabel="444-01-MA1" Direction="Left"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="255,205,0,0" VerticalAlignment="Top" Width="71" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="323,222,0,0" VerticalAlignment="Top" Width="71" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -172,7 +173,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="278,57,0,0" VerticalAlignment="Top" Height="180" Width="150" RenderTransformOrigin="0.5,0.5">
+        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="346,74,0,0" VerticalAlignment="Top" Height="180" Width="150" RenderTransformOrigin="0.5,0.5">
             <Machines:DCE_DryingCentrifuge.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -182,7 +183,7 @@
                 </TransformGroup>
             </Machines:DCE_DryingCentrifuge.RenderTransform>
         </Machines:DCE_DryingCentrifuge>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1078,645,0,0" VerticalAlignment="Top" Color="Water" Width="50" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="502-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1139,643,0,0" VerticalAlignment="Top" Color="Water" Width="64" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="502-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -192,7 +193,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="948,646,0,0" VerticalAlignment="Top" Width="98" StatusComponent="500-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1023,656,0,0" VerticalAlignment="Top" Width="84" StatusComponent="500-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -202,8 +203,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="992,686,0,0" VerticalAlignment="Top" Width="92" StatusComponent="500-01-MA1" PipeHeight="Medium" Height="22"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1123,698,0,0" VerticalAlignment="Top" Width="87" RenderTransformOrigin="0.5,0.5" StatusComponent="502-01-MA1" PipeHeight="Medium" Height="22">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1060,688,0,0" VerticalAlignment="Top" Width="92" StatusComponent="500-01-MA1" PipeHeight="Medium" Height="22"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1190,688,0,0" VerticalAlignment="Top" Width="126" RenderTransformOrigin="0.5,0.5" StatusComponent="502-01-MA1" PipeHeight="Medium" Height="22">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -213,8 +214,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1075,656,0,0" VerticalAlignment="Top" Height="70" Width="64"/>
-        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="881,592,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="131" Height="19">
+        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="949,609,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="131" Height="19">
             <Machines:SCW_ScrewConveyor_straight.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -225,14 +225,14 @@
             </Machines:SCW_ScrewConveyor_straight.RenderTransform>
         </Machines:SCW_ScrewConveyor_straight>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="882,622,0,0" 
+            Margin="950,639,0,0" 
             VerticalAlignment="Top" 
             ComponentName="500-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1060,724,0,0" 
+            Margin="1127,731,0,0" 
             VerticalAlignment="Top" 
             ComponentName="502-01-MA1"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1064,594,0,0" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="45" Width="77">
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1132,586,0,0" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="45" Width="77">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -243,13 +243,14 @@
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1126,592,0,0" 
+            Margin="1194,584,0,0" 
             VerticalAlignment="Top" 
             ComponentName="502-21-CV1"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="1195,673,0,0" 
+            Margin="1293,664,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="502-01-MA1" 
             JumpToLabel="530-01-MA1"/>
-    </Grid>
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1144" Canvas.Top="671" Height="54" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    </Canvas>
 </UserControl>
