V3510 Update Dettaglio filtro a maniche + immagine VT_CMM

--- a/Prevu.Synoptics.V3510_Greentech_Romania/P766.xaml
+++ b/Prevu.Synoptics.V3510_Greentech_Romania/P766.xaml
@@ -372,7 +372,7 @@
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Center" 
             ComponentName="808-21-CV1" Canvas.Left="628" Canvas.Top="712" />
-        <Blowers:VT_CMM_BlowerAirCompressor HorizontalAlignment="Left" Width="51" Color="Air" Canvas.Left="309" Canvas.Top="297" VerticalAlignment="Center"/>
-        <Blowers:VT_CMM_BlowerAirCompressor HorizontalAlignment="Left" Width="52" Color="Air" Canvas.Left="307" Canvas.Top="660" VerticalAlignment="Center" />
+        <Blowers:VT_CMM_BlowerAirCompressor HorizontalAlignment="Left" Width="51" Canvas.Left="309" Canvas.Top="297" VerticalAlignment="Center"/>
+        <Blowers:VT_CMM_BlowerAirCompressor HorizontalAlignment="Left" Width="52" Canvas.Left="307" Canvas.Top="660" VerticalAlignment="Center" />
     </Canvas>
 </UserControl>
