V3168 update immagine VT_CMM

--- a/Prevu.Synoptics.V3168_Sirplaste/P290.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P290.xaml
@@ -258,7 +258,7 @@
             Margin="126,152,0,0" 
             VerticalAlignment="Top" 
             ComponentName="268-21-CV1"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="400" Canvas.Top="286" HorizontalAlignment="Center" VerticalAlignment="Center" Width="58" Color="Air"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="155" Canvas.Top="682" Width="58" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="400" Canvas.Top="286" HorizontalAlignment="Center" VerticalAlignment="Center" Width="58" />
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="155" Canvas.Top="682" Width="58" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
