--- a/Prevu.Synoptics.V3168_Sirplaste/P810.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P810.xaml
@@ -221,8 +221,8 @@
         <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Center" VerticalAlignment="Top" Height="22" Width="166" Canvas.Left="1055" Canvas.Top="535"/>
         <Machines:BBF_BigBagFilling HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="1237" Canvas.Top="585"/>
         <Machines:Storage_silo Height="284" Canvas.Left="309" Canvas.Top="182" Width="205" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Blowers:VT_CMM_BlowerAirCompressor Color="Air" Height="50" Canvas.Left="685" Canvas.Top="709" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Blowers:VT_CMM_BlowerAirCompressor Color="ByProduct" Height="50" Canvas.Left="1061" Canvas.Top="220" Width="49" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Height="50" Canvas.Left="685" Canvas.Top="709" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Blowers:VT_CMM_BlowerAirCompressor Height="50" Canvas.Left="1061" Canvas.Top="220" Width="49" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="850-01-MA1" Canvas.Left="998" Canvas.Top="133"/>
