--- a/Prevu.Synoptics.V3168_Sirplaste/P970.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P970.xaml
@@ -61,6 +61,6 @@
         <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" 
             VerticalAlignment="Center" Height="66" Width="122" TextAlignment="Center" 
             FontSize="20" Foreground="White" Text="MACHINES EXHAUST" Canvas.Left="515" Canvas.Top="290"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="800" Canvas.Top="212" Height="59" Width="60" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Air"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="800" Canvas.Top="212" Height="59" Width="60" HorizontalAlignment="Center" VerticalAlignment="Top" />
     </Canvas>
 </UserControl>
