--- a/Prevu.Synoptics.V3168_Sirplaste/P997.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P997.xaml
@@ -315,9 +315,9 @@
         <BigBag:BBF_DoubleBigBagFilling Canvas.Left="698" Canvas.Top="633" Height="166" Width="286" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <BigBag:BBF_DoubleBigBagFilling Canvas.Left="253" Canvas.Top="633" Height="166" Width="286" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <BigBag:BBF_DoubleBigBagFilling Canvas.Left="1139" Canvas.Top="633" Height="166" Width="286" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="159" Canvas.Top="465" Height="52" Width="48" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="600" Canvas.Top="465" Height="52" Width="48" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1050" Canvas.Top="465" Height="52" Width="48" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="159" Canvas.Top="465" Height="52" Width="48" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="600" Canvas.Top="465" Height="52" Width="48" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1050" Canvas.Top="465" Height="52" Width="48" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="FKS-71-ECS1" 
